// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`page 1 > matches the native layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading:surah_name:1",
          128.35,
          126,
          163.3,
          16.8,
        ],
      ],
      "testID": "line:1",
    },
    {
      "elements": [
        [
          "word:1:1:1",
          291.41,
          175.88,
          31.99,
          18.39,
        ],
        [
          "word:1:1:2",
          244.26,
          175.88,
          41.55,
          18.39,
        ],
        [
          "word:1:1:3",
          177.98,
          175.88,
          60.68,
          18.39,
        ],
        [
          "word:1:1:4",
          111.71,
          175.88,
          60.68,
          18.39,
        ],
        [
          "ayah-marker:1:1",
          96.6,
          175.88,
          9.51,
          13.59,
        ],
      ],
      "testID": "line:2",
    },
    {
      "elements": [
        [
          "word:1:2:1",
          267.58,
          225.75,
          55.82,
          20.08,
        ],
        [
          "word:1:2:2",
          226.53,
          225.75,
          34.94,
          20.08,
        ],
        [
          "word:1:2:3",
          195.92,
          225.75,
          24.5,
          20.08,
        ],
        [
          "word:1:2:4",
          113.1,
          225.75,
          76.71,
          20.08,
        ],
        [
          "ayah-marker:1:2",
          96.6,
          225.75,
          10.39,
          14.84,
        ],
      ],
      "testID": "line:3",
    },
    {
      "elements": [
        [
          "word:1:3:1",
          275.79,
          275.63,
          47.61,
          14.43,
        ],
        [
          "word:1:3:2",
          223.79,
          275.63,
          47.61,
          14.43,
        ],
        [
          "ayah-marker:1:3",
          211.94,
          275.63,
          7.46,
          10.66,
        ],
        [
          "word:1:4:1",
          182.45,
          275.63,
          25.1,
          14.43,
        ],
        [
          "word:1:4:2",
          152.95,
          275.63,
          25.1,
          14.43,
        ],
        [
          "word:1:4:3",
          108.45,
          275.63,
          40.11,
          14.43,
        ],
        [
          "ayah-marker:1:4",
          96.6,
          275.63,
          7.46,
          10.66,
        ],
      ],
      "testID": "line:4",
    },
    {
      "elements": [
        [
          "word:1:5:1",
          290.16,
          325.5,
          33.24,
          14.71,
        ],
        [
          "word:1:5:2",
          252.44,
          325.5,
          33.24,
          14.71,
        ],
        [
          "word:1:5:3",
          207.07,
          325.5,
          40.89,
          14.71,
        ],
        [
          "word:1:5:4",
          154.05,
          325.5,
          48.54,
          14.71,
        ],
        [
          "ayah-marker:1:5",
          141.97,
          325.5,
          7.61,
          10.87,
        ],
        [
          "word:1:6:1",
          96.6,
          325.5,
          40.89,
          14.71,
        ],
      ],
      "testID": "line:5",
    },
    {
      "elements": [
        [
          "word:1:6:2",
          285.09,
          375.38,
          38.31,
          13.78,
        ],
        [
          "word:1:6:3",
          221.1,
          375.38,
          59.8,
          13.78,
        ],
        [
          "ayah-marker:1:6",
          209.77,
          375.38,
          7.13,
          10.18,
        ],
        [
          "word:1:7:1",
          181.6,
          375.38,
          23.98,
          13.78,
        ],
        [
          "word:1:7:2",
          139.1,
          375.38,
          38.31,
          13.78,
        ],
        [
          "word:1:7:3",
          96.6,
          375.38,
          38.31,
          13.78,
        ],
      ],
      "testID": "line:6",
    },
    {
      "elements": [
        [
          "word:1:7:4",
          271,
          425.25,
          52.4,
          18.85,
        ],
        [
          "word:1:7:5",
          232.47,
          425.25,
          32.8,
          18.85,
        ],
        [
          "word:1:7:6",
          154.73,
          425.25,
          72,
          18.85,
        ],
        [
          "word:1:7:7",
          96.6,
          425.25,
          52.4,
          18.85,
        ],
      ],
      "testID": "line:7",
    },
    {
      "elements": [
        [
          "word:1:7:8",
          240.97,
          475.13,
          33.62,
          19.32,
        ],
        [
          "word:1:7:9",
          161.29,
          475.13,
          73.8,
          19.32,
        ],
        [
          "ayah-marker:1:7",
          145.41,
          475.13,
          10,
          14.28,
        ],
      ],
      "testID": "line:8",
    },
  ],
  "testID": "mushaf-page:qpc-hafs-madani-604:1",
}
`;

exports[`page 1 > matches the web layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading",
          "surah_name",
          128.35,
          126,
          163.3,
          16.8,
        ],
      ],
      "line": 1,
      "type": "surah_name",
    },
    {
      "elements": [
        [
          "word",
          "1:1:1",
          291.41,
          175.88,
          31.99,
          18.39,
        ],
        [
          "word",
          "1:1:2",
          244.26,
          175.88,
          41.55,
          18.39,
        ],
        [
          "word",
          "1:1:3",
          177.98,
          175.88,
          60.68,
          18.39,
        ],
        [
          "word",
          "1:1:4",
          111.71,
          175.88,
          60.68,
          18.39,
        ],
        [
          "ayah-marker",
          "1:1",
          96.6,
          175.88,
          9.51,
          13.59,
        ],
      ],
      "line": 2,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:2:1",
          267.58,
          225.75,
          55.82,
          20.08,
        ],
        [
          "word",
          "1:2:2",
          226.53,
          225.75,
          34.94,
          20.08,
        ],
        [
          "word",
          "1:2:3",
          195.92,
          225.75,
          24.5,
          20.08,
        ],
        [
          "word",
          "1:2:4",
          113.1,
          225.75,
          76.71,
          20.08,
        ],
        [
          "ayah-marker",
          "1:2",
          96.6,
          225.75,
          10.39,
          14.84,
        ],
      ],
      "line": 3,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:3:1",
          275.79,
          275.63,
          47.61,
          14.43,
        ],
        [
          "word",
          "1:3:2",
          223.79,
          275.63,
          47.61,
          14.43,
        ],
        [
          "ayah-marker",
          "1:3",
          211.94,
          275.63,
          7.46,
          10.66,
        ],
        [
          "word",
          "1:4:1",
          182.45,
          275.63,
          25.1,
          14.43,
        ],
        [
          "word",
          "1:4:2",
          152.95,
          275.63,
          25.1,
          14.43,
        ],
        [
          "word",
          "1:4:3",
          108.45,
          275.63,
          40.11,
          14.43,
        ],
        [
          "ayah-marker",
          "1:4",
          96.6,
          275.63,
          7.46,
          10.66,
        ],
      ],
      "line": 4,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:5:1",
          290.16,
          325.5,
          33.24,
          14.71,
        ],
        [
          "word",
          "1:5:2",
          252.44,
          325.5,
          33.24,
          14.71,
        ],
        [
          "word",
          "1:5:3",
          207.07,
          325.5,
          40.89,
          14.71,
        ],
        [
          "word",
          "1:5:4",
          154.05,
          325.5,
          48.54,
          14.71,
        ],
        [
          "ayah-marker",
          "1:5",
          141.97,
          325.5,
          7.61,
          10.87,
        ],
        [
          "word",
          "1:6:1",
          96.6,
          325.5,
          40.89,
          14.71,
        ],
      ],
      "line": 5,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:6:2",
          285.09,
          375.38,
          38.31,
          13.78,
        ],
        [
          "word",
          "1:6:3",
          221.1,
          375.38,
          59.8,
          13.78,
        ],
        [
          "ayah-marker",
          "1:6",
          209.77,
          375.38,
          7.13,
          10.18,
        ],
        [
          "word",
          "1:7:1",
          181.6,
          375.38,
          23.98,
          13.78,
        ],
        [
          "word",
          "1:7:2",
          139.1,
          375.38,
          38.31,
          13.78,
        ],
        [
          "word",
          "1:7:3",
          96.6,
          375.38,
          38.31,
          13.78,
        ],
      ],
      "line": 6,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:7:4",
          271,
          425.25,
          52.4,
          18.85,
        ],
        [
          "word",
          "1:7:5",
          232.47,
          425.25,
          32.8,
          18.85,
        ],
        [
          "word",
          "1:7:6",
          154.73,
          425.25,
          72,
          18.85,
        ],
        [
          "word",
          "1:7:7",
          96.6,
          425.25,
          52.4,
          18.85,
        ],
      ],
      "line": 7,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "1:7:8",
          240.97,
          475.13,
          33.62,
          19.32,
        ],
        [
          "word",
          "1:7:9",
          161.29,
          475.13,
          73.8,
          19.32,
        ],
        [
          "ayah-marker",
          "1:7",
          145.41,
          475.13,
          10,
          14.28,
        ],
      ],
      "line": 8,
      "type": "ayah",
    },
  ],
  "mushafId": "qpc-hafs-madani-604",
  "pack": "sample-hafs-2026.07.0",
  "page": 1,
}
`;

exports[`page 2 > matches the native layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading:surah_name:2",
          128.35,
          126,
          163.3,
          16.8,
        ],
      ],
      "testID": "line:1",
    },
    {
      "elements": [
        [
          "heading:basmallah:2",
          128.35,
          175.88,
          163.3,
          16.8,
        ],
      ],
      "testID": "line:2",
    },
    {
      "elements": [
        [
          "word:2:1:1",
          297.69,
          225.75,
          25.71,
          14.78,
        ],
        [
          "ayah-marker:2:1",
          285.54,
          225.75,
          7.65,
          10.92,
        ],
        [
          "word:2:2:1",
          255.33,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word:2:2:2",
          209.76,
          225.75,
          41.08,
          14.78,
        ],
        [
          "word:2:2:3",
          187.23,
          225.75,
          18.03,
          14.78,
        ],
        [
          "word:2:2:4",
          157.02,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word:2:2:5",
          126.81,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word:2:2:6",
          96.6,
          225.75,
          25.71,
          14.78,
        ],
      ],
      "testID": "line:3",
    },
    {
      "elements": [
        [
          "word:2:2:7",
          285.17,
          275.63,
          38.23,
          10.01,
        ],
        [
          "ayah-marker:2:2",
          276.95,
          275.63,
          5.18,
          7.4,
        ],
        [
          "word:2:3:1",
          246.08,
          275.63,
          27.82,
          10.01,
        ],
        [
          "word:2:3:2",
          210.01,
          275.63,
          33.02,
          10.01,
        ],
        [
          "word:2:3:3",
          173.94,
          275.63,
          33.02,
          10.01,
        ],
        [
          "word:2:3:4",
          132.67,
          275.63,
          38.23,
          10.01,
        ],
        [
          "word:2:3:5",
          96.6,
          275.63,
          33.02,
          10.01,
        ],
      ],
      "testID": "line:4",
    },
    {
      "elements": [
        [
          "word:2:3:6",
          300.22,
          325.5,
          23.18,
          10.26,
        ],
        [
          "word:2:3:7",
          263.24,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word:2:3:8",
          226.26,
          325.5,
          33.85,
          10.26,
        ],
        [
          "ayah-marker:2:3",
          217.83,
          325.5,
          5.31,
          7.58,
        ],
        [
          "word:2:4:1",
          180.86,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word:2:4:2",
          143.88,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word:2:4:3",
          122.91,
          325.5,
          17.85,
          10.26,
        ],
        [
          "word:2:4:4",
          96.6,
          325.5,
          23.18,
          10.26,
        ],
      ],
      "testID": "line:5",
    },
    {
      "elements": [
        [
          "word:2:4:5",
          299.62,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word:2:4:6",
          278.1,
          375.38,
          18.31,
          10.52,
        ],
        [
          "word:2:4:7",
          251.12,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word:2:4:8",
          235.08,
          375.38,
          12.84,
          10.52,
        ],
        [
          "word:2:4:9",
          208.09,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word:2:4:10",
          159.22,
          375.38,
          45.67,
          10.52,
        ],
        [
          "word:2:4:11",
          143.18,
          375.38,
          12.84,
          10.52,
        ],
        [
          "word:2:4:12",
          105.25,
          375.38,
          34.73,
          10.52,
        ],
        [
          "ayah-marker:2:4",
          96.6,
          375.38,
          5.44,
          7.78,
        ],
      ],
      "testID": "line:6",
    },
    {
      "elements": [
        [
          "word:2:5:1",
          280.1,
          425.25,
          43.3,
          15.58,
        ],
        [
          "word:2:5:2",
          248.26,
          425.25,
          27.1,
          15.58,
        ],
        [
          "word:2:5:3",
          216.42,
          425.25,
          27.1,
          15.58,
        ],
        [
          "word:2:5:4",
          192.68,
          425.25,
          19,
          15.58,
        ],
        [
          "word:2:5:5",
          152.74,
          425.25,
          35.2,
          15.58,
        ],
        [
          "word:2:5:6",
          96.6,
          425.25,
          51.4,
          15.58,
        ],
      ],
      "testID": "line:7",
    },
    {
      "elements": [
        [
          "word:2:5:7",
          251.02,
          475.13,
          23.57,
          19.32,
        ],
        [
          "word:2:5:8",
          161.29,
          475.13,
          83.85,
          19.32,
        ],
        [
          "ayah-marker:2:5",
          145.41,
          475.13,
          10,
          14.28,
        ],
      ],
      "testID": "line:8",
    },
  ],
  "testID": "mushaf-page:qpc-hafs-madani-604:2",
}
`;

exports[`page 2 > matches the web layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading",
          "surah_name",
          128.35,
          126,
          163.3,
          16.8,
        ],
      ],
      "line": 1,
      "type": "surah_name",
    },
    {
      "elements": [
        [
          "heading",
          "basmallah",
          128.35,
          175.88,
          163.3,
          16.8,
        ],
      ],
      "line": 2,
      "type": "basmallah",
    },
    {
      "elements": [
        [
          "word",
          "2:1:1",
          297.69,
          225.75,
          25.71,
          14.78,
        ],
        [
          "ayah-marker",
          "2:1",
          285.54,
          225.75,
          7.65,
          10.92,
        ],
        [
          "word",
          "2:2:1",
          255.33,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word",
          "2:2:2",
          209.76,
          225.75,
          41.08,
          14.78,
        ],
        [
          "word",
          "2:2:3",
          187.23,
          225.75,
          18.03,
          14.78,
        ],
        [
          "word",
          "2:2:4",
          157.02,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word",
          "2:2:5",
          126.81,
          225.75,
          25.71,
          14.78,
        ],
        [
          "word",
          "2:2:6",
          96.6,
          225.75,
          25.71,
          14.78,
        ],
      ],
      "line": 3,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:2:7",
          285.17,
          275.63,
          38.23,
          10.01,
        ],
        [
          "ayah-marker",
          "2:2",
          276.95,
          275.63,
          5.18,
          7.4,
        ],
        [
          "word",
          "2:3:1",
          246.08,
          275.63,
          27.82,
          10.01,
        ],
        [
          "word",
          "2:3:2",
          210.01,
          275.63,
          33.02,
          10.01,
        ],
        [
          "word",
          "2:3:3",
          173.94,
          275.63,
          33.02,
          10.01,
        ],
        [
          "word",
          "2:3:4",
          132.67,
          275.63,
          38.23,
          10.01,
        ],
        [
          "word",
          "2:3:5",
          96.6,
          275.63,
          33.02,
          10.01,
        ],
      ],
      "line": 4,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:3:6",
          300.22,
          325.5,
          23.18,
          10.26,
        ],
        [
          "word",
          "2:3:7",
          263.24,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word",
          "2:3:8",
          226.26,
          325.5,
          33.85,
          10.26,
        ],
        [
          "ayah-marker",
          "2:3",
          217.83,
          325.5,
          5.31,
          7.58,
        ],
        [
          "word",
          "2:4:1",
          180.86,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word",
          "2:4:2",
          143.88,
          325.5,
          33.85,
          10.26,
        ],
        [
          "word",
          "2:4:3",
          122.91,
          325.5,
          17.85,
          10.26,
        ],
        [
          "word",
          "2:4:4",
          96.6,
          325.5,
          23.18,
          10.26,
        ],
      ],
      "line": 5,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:4:5",
          299.62,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word",
          "2:4:6",
          278.1,
          375.38,
          18.31,
          10.52,
        ],
        [
          "word",
          "2:4:7",
          251.12,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word",
          "2:4:8",
          235.08,
          375.38,
          12.84,
          10.52,
        ],
        [
          "word",
          "2:4:9",
          208.09,
          375.38,
          23.78,
          10.52,
        ],
        [
          "word",
          "2:4:10",
          159.22,
          375.38,
          45.67,
          10.52,
        ],
        [
          "word",
          "2:4:11",
          143.18,
          375.38,
          12.84,
          10.52,
        ],
        [
          "word",
          "2:4:12",
          105.25,
          375.38,
          34.73,
          10.52,
        ],
        [
          "ayah-marker",
          "2:4",
          96.6,
          375.38,
          5.44,
          7.78,
        ],
      ],
      "line": 6,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:5:1",
          280.1,
          425.25,
          43.3,
          15.58,
        ],
        [
          "word",
          "2:5:2",
          248.26,
          425.25,
          27.1,
          15.58,
        ],
        [
          "word",
          "2:5:3",
          216.42,
          425.25,
          27.1,
          15.58,
        ],
        [
          "word",
          "2:5:4",
          192.68,
          425.25,
          19,
          15.58,
        ],
        [
          "word",
          "2:5:5",
          152.74,
          425.25,
          35.2,
          15.58,
        ],
        [
          "word",
          "2:5:6",
          96.6,
          425.25,
          51.4,
          15.58,
        ],
      ],
      "line": 7,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:5:7",
          251.02,
          475.13,
          23.57,
          19.32,
        ],
        [
          "word",
          "2:5:8",
          161.29,
          475.13,
          83.85,
          19.32,
        ],
        [
          "ayah-marker",
          "2:5",
          145.41,
          475.13,
          10,
          14.28,
        ],
      ],
      "line": 8,
      "type": "ayah",
    },
  ],
  "mushafId": "qpc-hafs-madani-604",
  "pack": "sample-hafs-2026.07.0",
  "page": 2,
}
`;

exports[`page 42 > matches the native layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "word:2:253:1",
          360.58,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word:2:253:2",
          314.82,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word:2:253:3",
          269.06,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word:2:253:4",
          223.3,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word:2:253:5",
          192.97,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word:2:253:6",
          162.64,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word:2:253:7",
          124.59,
          37.8,
          33.53,
          14.84,
        ],
        [
          "word:2:253:8",
          101.98,
          37.8,
          18.1,
          14.84,
        ],
        [
          "word:2:253:9",
          71.65,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word:2:253:10",
          33.6,
          37.8,
          33.53,
          14.84,
        ],
      ],
      "testID": "line:1",
    },
    {
      "elements": [
        [
          "word:2:253:11",
          351.45,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word:2:253:12",
          303.74,
          76.16,
          43,
          15.47,
        ],
        [
          "word:2:253:13",
          264.08,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word:2:253:14",
          200.29,
          76.16,
          59.08,
          15.47,
        ],
        [
          "word:2:253:15",
          160.63,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word:2:253:16",
          129.01,
          76.16,
          26.91,
          15.47,
        ],
        [
          "word:2:253:17",
          89.35,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word:2:253:18",
          33.6,
          76.16,
          51.04,
          15.47,
        ],
      ],
      "testID": "line:2",
    },
    {
      "elements": [
        [
          "word:2:253:19",
          336.42,
          114.52,
          49.98,
          15.15,
        ],
        [
          "word:2:253:20",
          297.58,
          114.52,
          34.23,
          15.15,
        ],
        [
          "word:2:253:21",
          250.87,
          114.52,
          42.1,
          15.15,
        ],
        [
          "word:2:253:22",
          219.91,
          114.52,
          26.35,
          15.15,
        ],
        [
          "word:2:253:23",
          188.95,
          114.52,
          26.35,
          15.15,
        ],
        [
          "word:2:253:24",
          150.11,
          114.52,
          34.23,
          15.15,
        ],
        [
          "word:2:253:25",
          127.03,
          114.52,
          18.48,
          15.15,
        ],
        [
          "word:2:253:26",
          80.31,
          114.52,
          42.1,
          15.15,
        ],
        [
          "word:2:253:27",
          33.6,
          114.52,
          42.1,
          15.15,
        ],
      ],
      "testID": "line:3",
    },
    {
      "elements": [
        [
          "word:2:253:28",
          367.92,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word:2:253:29",
          321.21,
          152.88,
          42.1,
          15.15,
        ],
        [
          "word:2:253:30",
          298.12,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word:2:253:31",
          267.16,
          152.88,
          26.35,
          15.15,
        ],
        [
          "word:2:253:32",
          244.08,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word:2:253:33",
          189.49,
          152.88,
          49.98,
          15.15,
        ],
        [
          "word:2:253:34",
          134.9,
          152.88,
          49.98,
          15.15,
        ],
        [
          "word:2:253:35",
          96.06,
          152.88,
          34.23,
          15.15,
        ],
        [
          "word:2:253:36",
          33.6,
          152.88,
          57.85,
          15.15,
        ],
      ],
      "testID": "line:4",
    },
    {
      "elements": [
        [
          "word:2:253:37",
          348.42,
          191.24,
          37.98,
          13.66,
        ],
        [
          "word:2:253:38",
          327.59,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word:2:253:39",
          292.56,
          191.24,
          30.88,
          13.66,
        ],
        [
          "word:2:253:40",
          250.42,
          191.24,
          37.98,
          13.66,
        ],
        [
          "word:2:253:41",
          229.6,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word:2:253:42",
          201.67,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word:2:253:43",
          173.74,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word:2:253:44",
          145.81,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word:2:253:45",
          110.77,
          191.24,
          30.88,
          13.66,
        ],
        [
          "word:2:253:46",
          89.95,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word:2:253:47",
          33.6,
          191.24,
          52.19,
          13.66,
        ],
      ],
      "testID": "line:5",
    },
    {
      "elements": [
        [
          "word:2:253:48",
          356.25,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word:2:253:49",
          322.04,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word:2:253:50",
          287.83,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word:2:253:51",
          267.49,
          229.6,
          16.28,
          13.34,
        ],
        [
          "word:2:253:52",
          233.28,
          229.6,
          30.15,
          13.34,
        ],
        [
          "ayah-marker:2:253",
          212.06,
          229.6,
          17.16,
          9.86,
        ],
        [
          "word:2:254:1",
          170.92,
          229.6,
          37.09,
          13.34,
        ],
        [
          "word:2:254:2",
          129.77,
          229.6,
          37.09,
          13.34,
        ],
        [
          "word:2:254:3",
          81.68,
          229.6,
          44.02,
          13.34,
        ],
        [
          "word:2:254:4",
          33.6,
          229.6,
          44.02,
          13.34,
        ],
      ],
      "testID": "line:6",
    },
    {
      "elements": [
        [
          "word:2:254:5",
          363.49,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:6",
          316.03,
          267.96,
          43.45,
          13.17,
        ],
        [
          "word:2:254:7",
          295.95,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word:2:254:8",
          269.03,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:9",
          248.96,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word:2:254:10",
          215.19,
          267.96,
          29.76,
          13.17,
        ],
        [
          "word:2:254:11",
          188.27,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:12",
          168.2,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word:2:254:13",
          141.28,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:14",
          114.36,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:15",
          87.44,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:16",
          60.52,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word:2:254:17",
          33.6,
          267.96,
          22.91,
          13.17,
        ],
      ],
      "testID": "line:7",
    },
    {
      "elements": [
        [
          "word:2:254:18",
          352.96,
          306.32,
          33.44,
          14.8,
        ],
        [
          "word:2:254:19",
          284.25,
          306.32,
          64.21,
          14.8,
        ],
        [
          "word:2:254:20",
          261.69,
          306.32,
          18.05,
          14.8,
        ],
        [
          "word:2:254:21",
          200.67,
          306.32,
          56.52,
          14.8,
        ],
        [
          "ayah-marker:2:254",
          177.14,
          306.32,
          19.03,
          10.94,
        ],
        [
          "word:2:255:1",
          139.2,
          306.32,
          33.44,
          14.8,
        ],
        [
          "word:2:255:2",
          116.65,
          306.32,
          18.05,
          14.8,
        ],
        [
          "word:2:255:3",
          86.4,
          306.32,
          25.74,
          14.8,
        ],
        [
          "word:2:255:4",
          56.15,
          306.32,
          25.74,
          14.8,
        ],
        [
          "word:2:255:5",
          33.6,
          306.32,
          18.05,
          14.8,
        ],
      ],
      "testID": "line:8",
    },
    {
      "elements": [
        [
          "word:2:255:6",
          356.68,
          344.68,
          29.72,
          13.15,
        ],
        [
          "word:2:255:7",
          309.28,
          344.68,
          43.4,
          13.15,
        ],
        [
          "word:2:255:8",
          289.23,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word:2:255:9",
          248.67,
          344.68,
          36.56,
          13.15,
        ],
        [
          "word:2:255:10",
          221.79,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word:2:255:11",
          194.91,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word:2:255:12",
          168.02,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word:2:255:13",
          147.98,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word:2:255:14",
          127.93,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word:2:255:15",
          107.88,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word:2:255:16",
          60.48,
          344.68,
          43.4,
          13.15,
        ],
        [
          "word:2:255:17",
          33.6,
          344.68,
          22.88,
          13.15,
        ],
      ],
      "testID": "line:9",
    },
    {
      "elements": [
        [
          "word:2:255:18",
          370.04,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word:2:255:19",
          328.68,
          383.04,
          37.28,
          13.41,
        ],
        [
          "word:2:255:20",
          308.23,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word:2:255:21",
          287.79,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word:2:255:22",
          253.4,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word:2:255:23",
          219.01,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word:2:255:24",
          184.63,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word:2:255:25",
          157.21,
          383.04,
          23.33,
          13.41,
        ],
        [
          "word:2:255:26",
          115.85,
          383.04,
          37.28,
          13.41,
        ],
        [
          "word:2:255:27",
          81.46,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word:2:255:28",
          61.02,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word:2:255:29",
          33.6,
          383.04,
          23.33,
          13.41,
        ],
      ],
      "testID": "line:10",
    },
    {
      "elements": [
        [
          "word:2:255:30",
          339.49,
          421.4,
          46.91,
          14.21,
        ],
        [
          "word:2:255:31",
          310.43,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word:2:255:32",
          266.59,
          421.4,
          39.52,
          14.21,
        ],
        [
          "word:2:255:33",
          237.53,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word:2:255:34",
          186.29,
          421.4,
          46.91,
          14.21,
        ],
        [
          "word:2:255:35",
          149.84,
          421.4,
          32.13,
          14.21,
        ],
        [
          "word:2:255:36",
          128.17,
          421.4,
          17.34,
          14.21,
        ],
        [
          "word:2:255:37",
          91.72,
          421.4,
          32.13,
          14.21,
        ],
        [
          "word:2:255:38",
          62.66,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word:2:255:39",
          33.6,
          421.4,
          24.73,
          14.21,
        ],
      ],
      "testID": "line:11",
    },
    {
      "elements": [
        [
          "word:2:255:40",
          358.86,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word:2:255:41",
          326.5,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word:2:255:42",
          277.69,
          459.76,
          44,
          15.83,
        ],
        [
          "word:2:255:43",
          220.64,
          459.76,
          52.23,
          15.83,
        ],
        [
          "word:2:255:44",
          163.59,
          459.76,
          52.23,
          15.83,
        ],
        [
          "word:2:255:45",
          131.23,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word:2:255:46",
          90.65,
          459.76,
          35.77,
          15.83,
        ],
        [
          "word:2:255:47",
          33.6,
          459.76,
          52.23,
          15.83,
        ],
      ],
      "testID": "line:12",
    },
    {
      "elements": [
        [
          "word:2:255:48",
          363.16,
          498.12,
          23.24,
          13.36,
        ],
        [
          "word:2:255:49",
          321.95,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word:2:255:50",
          273.8,
          498.12,
          44.08,
          13.36,
        ],
        [
          "ayah-marker:2:255",
          252.56,
          498.12,
          17.18,
          9.87,
        ],
        [
          "word:2:256:1",
          232.19,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word:2:256:2",
          190.99,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word:2:256:3",
          170.63,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word:2:256:4",
          129.42,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word:2:256:5",
          109.06,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word:2:256:6",
          74.8,
          498.12,
          30.19,
          13.36,
        ],
        [
          "word:2:256:7",
          33.6,
          498.12,
          37.14,
          13.36,
        ],
      ],
      "testID": "line:13",
    },
    {
      "elements": [
        [
          "word:2:256:8",
          365.64,
          536.48,
          20.76,
          17.02,
        ],
        [
          "word:2:256:9",
          322,
          536.48,
          38.46,
          17.02,
        ],
        [
          "word:2:256:10",
          287.2,
          536.48,
          29.61,
          17.02,
        ],
        [
          "word:2:256:11",
          243.56,
          536.48,
          38.46,
          17.02,
        ],
        [
          "word:2:256:12",
          173.37,
          536.48,
          65.01,
          17.02,
        ],
        [
          "word:2:256:13",
          120.88,
          536.48,
          47.31,
          17.02,
        ],
        [
          "word:2:256:14",
          68.39,
          536.48,
          47.31,
          17.02,
        ],
        [
          "word:2:256:15",
          33.6,
          536.48,
          29.61,
          17.02,
        ],
      ],
      "testID": "line:14",
    },
    {
      "elements": [
        [
          "word:2:256:16",
          344.83,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word:2:256:17",
          292.87,
          574.84,
          48.12,
          12.6,
        ],
        [
          "word:2:256:18",
          247.46,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word:2:256:19",
          228.26,
          574.84,
          15.37,
          12.6,
        ],
        [
          "word:2:256:20",
          182.85,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word:2:256:21",
          157.1,
          574.84,
          21.92,
          12.6,
        ],
        [
          "word:2:256:22",
          118.25,
          574.84,
          35.02,
          12.6,
        ],
        [
          "word:2:256:23",
          85.94,
          574.84,
          28.47,
          12.6,
        ],
        [
          "word:2:256:24",
          53.64,
          574.84,
          28.47,
          12.6,
        ],
        [
          "ayah-marker:2:256",
          33.6,
          574.84,
          16.2,
          9.31,
        ],
      ],
      "testID": "line:15",
    },
  ],
  "testID": "mushaf-page:qpc-hafs-madani-604:42",
}
`;

exports[`page 42 > matches the web layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "word",
          "2:253:1",
          360.58,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word",
          "2:253:2",
          314.82,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word",
          "2:253:3",
          269.06,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word",
          "2:253:4",
          223.3,
          37.8,
          41.25,
          14.84,
        ],
        [
          "word",
          "2:253:5",
          192.97,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word",
          "2:253:6",
          162.64,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word",
          "2:253:7",
          124.59,
          37.8,
          33.53,
          14.84,
        ],
        [
          "word",
          "2:253:8",
          101.98,
          37.8,
          18.1,
          14.84,
        ],
        [
          "word",
          "2:253:9",
          71.65,
          37.8,
          25.82,
          14.84,
        ],
        [
          "word",
          "2:253:10",
          33.6,
          37.8,
          33.53,
          14.84,
        ],
      ],
      "line": 1,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:253:11",
          351.45,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word",
          "2:253:12",
          303.74,
          76.16,
          43,
          15.47,
        ],
        [
          "word",
          "2:253:13",
          264.08,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word",
          "2:253:14",
          200.29,
          76.16,
          59.08,
          15.47,
        ],
        [
          "word",
          "2:253:15",
          160.63,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word",
          "2:253:16",
          129.01,
          76.16,
          26.91,
          15.47,
        ],
        [
          "word",
          "2:253:17",
          89.35,
          76.16,
          34.95,
          15.47,
        ],
        [
          "word",
          "2:253:18",
          33.6,
          76.16,
          51.04,
          15.47,
        ],
      ],
      "line": 2,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:253:19",
          336.42,
          114.52,
          49.98,
          15.15,
        ],
        [
          "word",
          "2:253:20",
          297.58,
          114.52,
          34.23,
          15.15,
        ],
        [
          "word",
          "2:253:21",
          250.87,
          114.52,
          42.1,
          15.15,
        ],
        [
          "word",
          "2:253:22",
          219.91,
          114.52,
          26.35,
          15.15,
        ],
        [
          "word",
          "2:253:23",
          188.95,
          114.52,
          26.35,
          15.15,
        ],
        [
          "word",
          "2:253:24",
          150.11,
          114.52,
          34.23,
          15.15,
        ],
        [
          "word",
          "2:253:25",
          127.03,
          114.52,
          18.48,
          15.15,
        ],
        [
          "word",
          "2:253:26",
          80.31,
          114.52,
          42.1,
          15.15,
        ],
        [
          "word",
          "2:253:27",
          33.6,
          114.52,
          42.1,
          15.15,
        ],
      ],
      "line": 3,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:253:28",
          367.92,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word",
          "2:253:29",
          321.21,
          152.88,
          42.1,
          15.15,
        ],
        [
          "word",
          "2:253:30",
          298.12,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word",
          "2:253:31",
          267.16,
          152.88,
          26.35,
          15.15,
        ],
        [
          "word",
          "2:253:32",
          244.08,
          152.88,
          18.48,
          15.15,
        ],
        [
          "word",
          "2:253:33",
          189.49,
          152.88,
          49.98,
          15.15,
        ],
        [
          "word",
          "2:253:34",
          134.9,
          152.88,
          49.98,
          15.15,
        ],
        [
          "word",
          "2:253:35",
          96.06,
          152.88,
          34.23,
          15.15,
        ],
        [
          "word",
          "2:253:36",
          33.6,
          152.88,
          57.85,
          15.15,
        ],
      ],
      "line": 4,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:253:37",
          348.42,
          191.24,
          37.98,
          13.66,
        ],
        [
          "word",
          "2:253:38",
          327.59,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word",
          "2:253:39",
          292.56,
          191.24,
          30.88,
          13.66,
        ],
        [
          "word",
          "2:253:40",
          250.42,
          191.24,
          37.98,
          13.66,
        ],
        [
          "word",
          "2:253:41",
          229.6,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word",
          "2:253:42",
          201.67,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word",
          "2:253:43",
          173.74,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word",
          "2:253:44",
          145.81,
          191.24,
          23.77,
          13.66,
        ],
        [
          "word",
          "2:253:45",
          110.77,
          191.24,
          30.88,
          13.66,
        ],
        [
          "word",
          "2:253:46",
          89.95,
          191.24,
          16.67,
          13.66,
        ],
        [
          "word",
          "2:253:47",
          33.6,
          191.24,
          52.19,
          13.66,
        ],
      ],
      "line": 5,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:253:48",
          356.25,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word",
          "2:253:49",
          322.04,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word",
          "2:253:50",
          287.83,
          229.6,
          30.15,
          13.34,
        ],
        [
          "word",
          "2:253:51",
          267.49,
          229.6,
          16.28,
          13.34,
        ],
        [
          "word",
          "2:253:52",
          233.28,
          229.6,
          30.15,
          13.34,
        ],
        [
          "ayah-marker",
          "2:253",
          212.06,
          229.6,
          17.16,
          9.86,
        ],
        [
          "word",
          "2:254:1",
          170.92,
          229.6,
          37.09,
          13.34,
        ],
        [
          "word",
          "2:254:2",
          129.77,
          229.6,
          37.09,
          13.34,
        ],
        [
          "word",
          "2:254:3",
          81.68,
          229.6,
          44.02,
          13.34,
        ],
        [
          "word",
          "2:254:4",
          33.6,
          229.6,
          44.02,
          13.34,
        ],
      ],
      "line": 6,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:254:5",
          363.49,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:6",
          316.03,
          267.96,
          43.45,
          13.17,
        ],
        [
          "word",
          "2:254:7",
          295.95,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word",
          "2:254:8",
          269.03,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:9",
          248.96,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word",
          "2:254:10",
          215.19,
          267.96,
          29.76,
          13.17,
        ],
        [
          "word",
          "2:254:11",
          188.27,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:12",
          168.2,
          267.96,
          16.06,
          13.17,
        ],
        [
          "word",
          "2:254:13",
          141.28,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:14",
          114.36,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:15",
          87.44,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:16",
          60.52,
          267.96,
          22.91,
          13.17,
        ],
        [
          "word",
          "2:254:17",
          33.6,
          267.96,
          22.91,
          13.17,
        ],
      ],
      "line": 7,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:254:18",
          352.96,
          306.32,
          33.44,
          14.8,
        ],
        [
          "word",
          "2:254:19",
          284.25,
          306.32,
          64.21,
          14.8,
        ],
        [
          "word",
          "2:254:20",
          261.69,
          306.32,
          18.05,
          14.8,
        ],
        [
          "word",
          "2:254:21",
          200.67,
          306.32,
          56.52,
          14.8,
        ],
        [
          "ayah-marker",
          "2:254",
          177.14,
          306.32,
          19.03,
          10.94,
        ],
        [
          "word",
          "2:255:1",
          139.2,
          306.32,
          33.44,
          14.8,
        ],
        [
          "word",
          "2:255:2",
          116.65,
          306.32,
          18.05,
          14.8,
        ],
        [
          "word",
          "2:255:3",
          86.4,
          306.32,
          25.74,
          14.8,
        ],
        [
          "word",
          "2:255:4",
          56.15,
          306.32,
          25.74,
          14.8,
        ],
        [
          "word",
          "2:255:5",
          33.6,
          306.32,
          18.05,
          14.8,
        ],
      ],
      "line": 8,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:255:6",
          356.68,
          344.68,
          29.72,
          13.15,
        ],
        [
          "word",
          "2:255:7",
          309.28,
          344.68,
          43.4,
          13.15,
        ],
        [
          "word",
          "2:255:8",
          289.23,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word",
          "2:255:9",
          248.67,
          344.68,
          36.56,
          13.15,
        ],
        [
          "word",
          "2:255:10",
          221.79,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word",
          "2:255:11",
          194.91,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word",
          "2:255:12",
          168.02,
          344.68,
          22.88,
          13.15,
        ],
        [
          "word",
          "2:255:13",
          147.98,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word",
          "2:255:14",
          127.93,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word",
          "2:255:15",
          107.88,
          344.68,
          16.04,
          13.15,
        ],
        [
          "word",
          "2:255:16",
          60.48,
          344.68,
          43.4,
          13.15,
        ],
        [
          "word",
          "2:255:17",
          33.6,
          344.68,
          22.88,
          13.15,
        ],
      ],
      "line": 9,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:255:18",
          370.04,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word",
          "2:255:19",
          328.68,
          383.04,
          37.28,
          13.41,
        ],
        [
          "word",
          "2:255:20",
          308.23,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word",
          "2:255:21",
          287.79,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word",
          "2:255:22",
          253.4,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word",
          "2:255:23",
          219.01,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word",
          "2:255:24",
          184.63,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word",
          "2:255:25",
          157.21,
          383.04,
          23.33,
          13.41,
        ],
        [
          "word",
          "2:255:26",
          115.85,
          383.04,
          37.28,
          13.41,
        ],
        [
          "word",
          "2:255:27",
          81.46,
          383.04,
          30.31,
          13.41,
        ],
        [
          "word",
          "2:255:28",
          61.02,
          383.04,
          16.36,
          13.41,
        ],
        [
          "word",
          "2:255:29",
          33.6,
          383.04,
          23.33,
          13.41,
        ],
      ],
      "line": 10,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:255:30",
          339.49,
          421.4,
          46.91,
          14.21,
        ],
        [
          "word",
          "2:255:31",
          310.43,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word",
          "2:255:32",
          266.59,
          421.4,
          39.52,
          14.21,
        ],
        [
          "word",
          "2:255:33",
          237.53,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word",
          "2:255:34",
          186.29,
          421.4,
          46.91,
          14.21,
        ],
        [
          "word",
          "2:255:35",
          149.84,
          421.4,
          32.13,
          14.21,
        ],
        [
          "word",
          "2:255:36",
          128.17,
          421.4,
          17.34,
          14.21,
        ],
        [
          "word",
          "2:255:37",
          91.72,
          421.4,
          32.13,
          14.21,
        ],
        [
          "word",
          "2:255:38",
          62.66,
          421.4,
          24.73,
          14.21,
        ],
        [
          "word",
          "2:255:39",
          33.6,
          421.4,
          24.73,
          14.21,
        ],
      ],
      "line": 11,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:255:40",
          358.86,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word",
          "2:255:41",
          326.5,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word",
          "2:255:42",
          277.69,
          459.76,
          44,
          15.83,
        ],
        [
          "word",
          "2:255:43",
          220.64,
          459.76,
          52.23,
          15.83,
        ],
        [
          "word",
          "2:255:44",
          163.59,
          459.76,
          52.23,
          15.83,
        ],
        [
          "word",
          "2:255:45",
          131.23,
          459.76,
          27.54,
          15.83,
        ],
        [
          "word",
          "2:255:46",
          90.65,
          459.76,
          35.77,
          15.83,
        ],
        [
          "word",
          "2:255:47",
          33.6,
          459.76,
          52.23,
          15.83,
        ],
      ],
      "line": 12,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:255:48",
          363.16,
          498.12,
          23.24,
          13.36,
        ],
        [
          "word",
          "2:255:49",
          321.95,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word",
          "2:255:50",
          273.8,
          498.12,
          44.08,
          13.36,
        ],
        [
          "ayah-marker",
          "2:255",
          252.56,
          498.12,
          17.18,
          9.87,
        ],
        [
          "word",
          "2:256:1",
          232.19,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word",
          "2:256:2",
          190.99,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word",
          "2:256:3",
          170.63,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word",
          "2:256:4",
          129.42,
          498.12,
          37.14,
          13.36,
        ],
        [
          "word",
          "2:256:5",
          109.06,
          498.12,
          16.3,
          13.36,
        ],
        [
          "word",
          "2:256:6",
          74.8,
          498.12,
          30.19,
          13.36,
        ],
        [
          "word",
          "2:256:7",
          33.6,
          498.12,
          37.14,
          13.36,
        ],
      ],
      "line": 13,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:256:8",
          365.64,
          536.48,
          20.76,
          17.02,
        ],
        [
          "word",
          "2:256:9",
          322,
          536.48,
          38.46,
          17.02,
        ],
        [
          "word",
          "2:256:10",
          287.2,
          536.48,
          29.61,
          17.02,
        ],
        [
          "word",
          "2:256:11",
          243.56,
          536.48,
          38.46,
          17.02,
        ],
        [
          "word",
          "2:256:12",
          173.37,
          536.48,
          65.01,
          17.02,
        ],
        [
          "word",
          "2:256:13",
          120.88,
          536.48,
          47.31,
          17.02,
        ],
        [
          "word",
          "2:256:14",
          68.39,
          536.48,
          47.31,
          17.02,
        ],
        [
          "word",
          "2:256:15",
          33.6,
          536.48,
          29.61,
          17.02,
        ],
      ],
      "line": 14,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "2:256:16",
          344.83,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word",
          "2:256:17",
          292.87,
          574.84,
          48.12,
          12.6,
        ],
        [
          "word",
          "2:256:18",
          247.46,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word",
          "2:256:19",
          228.26,
          574.84,
          15.37,
          12.6,
        ],
        [
          "word",
          "2:256:20",
          182.85,
          574.84,
          41.57,
          12.6,
        ],
        [
          "word",
          "2:256:21",
          157.1,
          574.84,
          21.92,
          12.6,
        ],
        [
          "word",
          "2:256:22",
          118.25,
          574.84,
          35.02,
          12.6,
        ],
        [
          "word",
          "2:256:23",
          85.94,
          574.84,
          28.47,
          12.6,
        ],
        [
          "word",
          "2:256:24",
          53.64,
          574.84,
          28.47,
          12.6,
        ],
        [
          "ayah-marker",
          "2:256",
          33.6,
          574.84,
          16.2,
          9.31,
        ],
      ],
      "line": 15,
      "type": "ayah",
    },
  ],
  "mushafId": "qpc-hafs-madani-604",
  "pack": "sample-hafs-2026.07.0",
  "page": 42,
}
`;

exports[`page 604 > matches the native layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading:surah_name:112",
          82.99,
          37.8,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:1",
    },
    {
      "elements": [
        [
          "heading:basmallah:112",
          82.99,
          76.16,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:2",
    },
    {
      "elements": [
        [
          "word:112:1:1",
          362.77,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word:112:1:2",
          333.24,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word:112:1:3",
          283.57,
          114.52,
          43.78,
          19.37,
        ],
        [
          "word:112:1:4",
          243.97,
          114.52,
          33.7,
          19.37,
        ],
        [
          "ayah-marker:112:1",
          228.06,
          114.52,
          10.02,
          14.32,
        ],
        [
          "word:112:2:1",
          178.39,
          114.52,
          43.78,
          19.37,
        ],
        [
          "word:112:2:2",
          118.64,
          114.52,
          53.85,
          19.37,
        ],
        [
          "ayah-marker:112:2",
          102.72,
          114.52,
          10.02,
          14.32,
        ],
        [
          "word:112:3:1",
          73.2,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word:112:3:2",
          33.6,
          114.52,
          33.7,
          19.37,
        ],
      ],
      "testID": "line:3",
    },
    {
      "elements": [
        [
          "word:112:3:3",
          348.44,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word:112:3:4",
          292.48,
          152.88,
          49.31,
          21.82,
        ],
        [
          "ayah-marker:112:3",
          274.56,
          152.88,
          11.29,
          16.13,
        ],
        [
          "word:112:4:1",
          229.95,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word:112:4:2",
          185.34,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word:112:4:3",
          152.09,
          152.88,
          26.62,
          21.82,
        ],
        [
          "word:112:4:4",
          96.13,
          152.88,
          49.31,
          21.82,
        ],
        [
          "word:112:4:5",
          51.53,
          152.88,
          37.96,
          21.82,
        ],
        [
          "ayah-marker:112:4",
          33.6,
          152.88,
          11.29,
          16.13,
        ],
      ],
      "testID": "line:4",
    },
    {
      "elements": [
        [
          "heading:surah_name:113",
          82.99,
          191.24,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:5",
    },
    {
      "elements": [
        [
          "heading:basmallah:113",
          82.99,
          229.6,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:6",
    },
    {
      "elements": [
        [
          "word:113:1:1",
          364,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word:113:1:2",
          316.93,
          267.96,
          41.49,
          18.36,
        ],
        [
          "word:113:1:3",
          279.4,
          267.96,
          31.94,
          18.36,
        ],
        [
          "word:113:1:4",
          222.78,
          267.96,
          51.03,
          18.36,
        ],
        [
          "ayah-marker:113:1",
          207.69,
          267.96,
          9.5,
          13.57,
        ],
        [
          "word:113:2:1",
          179.71,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word:113:2:2",
          151.73,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word:113:2:3",
          123.74,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word:113:2:4",
          86.21,
          267.96,
          31.94,
          18.36,
        ],
        [
          "ayah-marker:113:2",
          71.13,
          267.96,
          9.5,
          13.57,
        ],
        [
          "word:113:3:1",
          33.6,
          267.96,
          31.94,
          18.36,
        ],
      ],
      "testID": "line:7",
    },
    {
      "elements": [
        [
          "word:113:3:2",
          361.65,
          306.32,
          24.75,
          20.28,
        ],
        [
          "word:113:3:3",
          309.63,
          306.32,
          45.84,
          20.28,
        ],
        [
          "word:113:3:4",
          268.16,
          306.32,
          35.3,
          20.28,
        ],
        [
          "word:113:3:5",
          226.7,
          306.32,
          35.3,
          20.28,
        ],
        [
          "ayah-marker:113:3",
          210.03,
          306.32,
          10.5,
          14.99,
        ],
        [
          "word:113:4:1",
          168.56,
          306.32,
          35.3,
          20.28,
        ],
        [
          "word:113:4:2",
          137.64,
          306.32,
          24.75,
          20.28,
        ],
        [
          "word:113:4:3",
          64.52,
          306.32,
          66.94,
          20.28,
        ],
        [
          "word:113:4:4",
          33.6,
          306.32,
          24.75,
          20.28,
        ],
      ],
      "testID": "line:8",
    },
    {
      "elements": [
        [
          "word:113:4:5",
          319.43,
          344.68,
          66.97,
          24.09,
        ],
        [
          "ayah-marker:113:4",
          299.63,
          344.68,
          12.46,
          17.81,
        ],
        [
          "word:113:5:1",
          250.39,
          344.68,
          41.92,
          24.09,
        ],
        [
          "word:113:5:2",
          213.67,
          344.68,
          29.39,
          24.09,
        ],
        [
          "word:113:5:3",
          151.89,
          344.68,
          54.44,
          24.09,
        ],
        [
          "word:113:5:4",
          102.64,
          344.68,
          41.92,
          24.09,
        ],
        [
          "word:113:5:5",
          53.4,
          344.68,
          41.92,
          24.09,
        ],
        [
          "ayah-marker:113:5",
          33.6,
          344.68,
          12.46,
          17.81,
        ],
      ],
      "testID": "line:9",
    },
    {
      "elements": [
        [
          "heading:surah_name:114",
          82.99,
          383.04,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:10",
    },
    {
      "elements": [
        [
          "heading:basmallah:114",
          82.99,
          421.4,
          254.02,
          16.8,
        ],
      ],
      "testID": "line:11",
    },
    {
      "elements": [
        [
          "word:114:1:1",
          362.12,
          459.76,
          24.28,
          19.9,
        ],
        [
          "word:114:1:2",
          311.1,
          459.76,
          44.97,
          19.9,
        ],
        [
          "word:114:1:3",
          270.41,
          459.76,
          34.62,
          19.9,
        ],
        [
          "word:114:1:4",
          209.04,
          459.76,
          55.32,
          19.9,
        ],
        [
          "ayah-marker:114:1",
          192.69,
          459.76,
          10.3,
          14.71,
        ],
        [
          "word:114:2:1",
          152.01,
          459.76,
          34.62,
          19.9,
        ],
        [
          "word:114:2:2",
          90.63,
          459.76,
          55.32,
          19.9,
        ],
        [
          "ayah-marker:114:2",
          74.28,
          459.76,
          10.3,
          14.71,
        ],
        [
          "word:114:3:1",
          33.6,
          459.76,
          34.62,
          19.9,
        ],
      ],
      "testID": "line:12",
    },
    {
      "elements": [
        [
          "word:114:3:2",
          331.19,
          498.12,
          55.21,
          19.86,
        ],
        [
          "ayah-marker:114:3",
          314.87,
          498.12,
          10.27,
          14.68,
        ],
        [
          "word:114:4:1",
          284.6,
          498.12,
          24.23,
          19.86,
        ],
        [
          "word:114:4:2",
          254.33,
          498.12,
          24.23,
          19.86,
        ],
        [
          "word:114:4:3",
          172.42,
          498.12,
          75.86,
          19.86,
        ],
        [
          "word:114:4:4",
          100.84,
          498.12,
          65.53,
          19.86,
        ],
        [
          "ayah-marker:114:4",
          84.53,
          498.12,
          10.27,
          14.68,
        ],
        [
          "word:114:5:1",
          33.6,
          498.12,
          44.88,
          19.86,
        ],
      ],
      "testID": "line:13",
    },
    {
      "elements": [
        [
          "word:114:5:2",
          260.37,
          536.48,
          53.71,
          19.32,
        ],
        [
          "word:114:5:3",
          230.92,
          536.48,
          23.57,
          19.32,
        ],
        [
          "word:114:5:4",
          181.38,
          536.48,
          43.66,
          19.32,
        ],
        [
          "word:114:5:5",
          121.79,
          536.48,
          53.71,
          19.32,
        ],
        [
          "ayah-marker:114:5",
          105.92,
          536.48,
          10,
          14.28,
        ],
      ],
      "testID": "line:14",
    },
    {
      "elements": [
        [
          "word:114:6:1",
          270.77,
          574.84,
          23.57,
          19.32,
        ],
        [
          "word:114:6:2",
          211.18,
          574.84,
          53.71,
          19.32,
        ],
        [
          "word:114:6:3",
          141.54,
          574.84,
          63.76,
          19.32,
        ],
        [
          "ayah-marker:114:6",
          125.66,
          574.84,
          10,
          14.28,
        ],
      ],
      "testID": "line:15",
    },
  ],
  "testID": "mushaf-page:qpc-hafs-madani-604:604",
}
`;

exports[`page 604 > matches the web layout snapshot 1`] = `
{
  "box": {
    "height": 651,
    "width": 420,
  },
  "lines": [
    {
      "elements": [
        [
          "heading",
          "surah_name",
          82.99,
          37.8,
          254.02,
          16.8,
        ],
      ],
      "line": 1,
      "type": "surah_name",
    },
    {
      "elements": [
        [
          "heading",
          "basmallah",
          82.99,
          76.16,
          254.02,
          16.8,
        ],
      ],
      "line": 2,
      "type": "basmallah",
    },
    {
      "elements": [
        [
          "word",
          "112:1:1",
          362.77,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word",
          "112:1:2",
          333.24,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word",
          "112:1:3",
          283.57,
          114.52,
          43.78,
          19.37,
        ],
        [
          "word",
          "112:1:4",
          243.97,
          114.52,
          33.7,
          19.37,
        ],
        [
          "ayah-marker",
          "112:1",
          228.06,
          114.52,
          10.02,
          14.32,
        ],
        [
          "word",
          "112:2:1",
          178.39,
          114.52,
          43.78,
          19.37,
        ],
        [
          "word",
          "112:2:2",
          118.64,
          114.52,
          53.85,
          19.37,
        ],
        [
          "ayah-marker",
          "112:2",
          102.72,
          114.52,
          10.02,
          14.32,
        ],
        [
          "word",
          "112:3:1",
          73.2,
          114.52,
          23.63,
          19.37,
        ],
        [
          "word",
          "112:3:2",
          33.6,
          114.52,
          33.7,
          19.37,
        ],
      ],
      "line": 3,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "112:3:3",
          348.44,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word",
          "112:3:4",
          292.48,
          152.88,
          49.31,
          21.82,
        ],
        [
          "ayah-marker",
          "112:3",
          274.56,
          152.88,
          11.29,
          16.13,
        ],
        [
          "word",
          "112:4:1",
          229.95,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word",
          "112:4:2",
          185.34,
          152.88,
          37.96,
          21.82,
        ],
        [
          "word",
          "112:4:3",
          152.09,
          152.88,
          26.62,
          21.82,
        ],
        [
          "word",
          "112:4:4",
          96.13,
          152.88,
          49.31,
          21.82,
        ],
        [
          "word",
          "112:4:5",
          51.53,
          152.88,
          37.96,
          21.82,
        ],
        [
          "ayah-marker",
          "112:4",
          33.6,
          152.88,
          11.29,
          16.13,
        ],
      ],
      "line": 4,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "heading",
          "surah_name",
          82.99,
          191.24,
          254.02,
          16.8,
        ],
      ],
      "line": 5,
      "type": "surah_name",
    },
    {
      "elements": [
        [
          "heading",
          "basmallah",
          82.99,
          229.6,
          254.02,
          16.8,
        ],
      ],
      "line": 6,
      "type": "basmallah",
    },
    {
      "elements": [
        [
          "word",
          "113:1:1",
          364,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word",
          "113:1:2",
          316.93,
          267.96,
          41.49,
          18.36,
        ],
        [
          "word",
          "113:1:3",
          279.4,
          267.96,
          31.94,
          18.36,
        ],
        [
          "word",
          "113:1:4",
          222.78,
          267.96,
          51.03,
          18.36,
        ],
        [
          "ayah-marker",
          "113:1",
          207.69,
          267.96,
          9.5,
          13.57,
        ],
        [
          "word",
          "113:2:1",
          179.71,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word",
          "113:2:2",
          151.73,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word",
          "113:2:3",
          123.74,
          267.96,
          22.4,
          18.36,
        ],
        [
          "word",
          "113:2:4",
          86.21,
          267.96,
          31.94,
          18.36,
        ],
        [
          "ayah-marker",
          "113:2",
          71.13,
          267.96,
          9.5,
          13.57,
        ],
        [
          "word",
          "113:3:1",
          33.6,
          267.96,
          31.94,
          18.36,
        ],
      ],
      "line": 7,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "113:3:2",
          361.65,
          306.32,
          24.75,
          20.28,
        ],
        [
          "word",
          "113:3:3",
          309.63,
          306.32,
          45.84,
          20.28,
        ],
        [
          "word",
          "113:3:4",
          268.16,
          306.32,
          35.3,
          20.28,
        ],
        [
          "word",
          "113:3:5",
          226.7,
          306.32,
          35.3,
          20.28,
        ],
        [
          "ayah-marker",
          "113:3",
          210.03,
          306.32,
          10.5,
          14.99,
        ],
        [
          "word",
          "113:4:1",
          168.56,
          306.32,
          35.3,
          20.28,
        ],
        [
          "word",
          "113:4:2",
          137.64,
          306.32,
          24.75,
          20.28,
        ],
        [
          "word",
          "113:4:3",
          64.52,
          306.32,
          66.94,
          20.28,
        ],
        [
          "word",
          "113:4:4",
          33.6,
          306.32,
          24.75,
          20.28,
        ],
      ],
      "line": 8,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "113:4:5",
          319.43,
          344.68,
          66.97,
          24.09,
        ],
        [
          "ayah-marker",
          "113:4",
          299.63,
          344.68,
          12.46,
          17.81,
        ],
        [
          "word",
          "113:5:1",
          250.39,
          344.68,
          41.92,
          24.09,
        ],
        [
          "word",
          "113:5:2",
          213.67,
          344.68,
          29.39,
          24.09,
        ],
        [
          "word",
          "113:5:3",
          151.89,
          344.68,
          54.44,
          24.09,
        ],
        [
          "word",
          "113:5:4",
          102.64,
          344.68,
          41.92,
          24.09,
        ],
        [
          "word",
          "113:5:5",
          53.4,
          344.68,
          41.92,
          24.09,
        ],
        [
          "ayah-marker",
          "113:5",
          33.6,
          344.68,
          12.46,
          17.81,
        ],
      ],
      "line": 9,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "heading",
          "surah_name",
          82.99,
          383.04,
          254.02,
          16.8,
        ],
      ],
      "line": 10,
      "type": "surah_name",
    },
    {
      "elements": [
        [
          "heading",
          "basmallah",
          82.99,
          421.4,
          254.02,
          16.8,
        ],
      ],
      "line": 11,
      "type": "basmallah",
    },
    {
      "elements": [
        [
          "word",
          "114:1:1",
          362.12,
          459.76,
          24.28,
          19.9,
        ],
        [
          "word",
          "114:1:2",
          311.1,
          459.76,
          44.97,
          19.9,
        ],
        [
          "word",
          "114:1:3",
          270.41,
          459.76,
          34.62,
          19.9,
        ],
        [
          "word",
          "114:1:4",
          209.04,
          459.76,
          55.32,
          19.9,
        ],
        [
          "ayah-marker",
          "114:1",
          192.69,
          459.76,
          10.3,
          14.71,
        ],
        [
          "word",
          "114:2:1",
          152.01,
          459.76,
          34.62,
          19.9,
        ],
        [
          "word",
          "114:2:2",
          90.63,
          459.76,
          55.32,
          19.9,
        ],
        [
          "ayah-marker",
          "114:2",
          74.28,
          459.76,
          10.3,
          14.71,
        ],
        [
          "word",
          "114:3:1",
          33.6,
          459.76,
          34.62,
          19.9,
        ],
      ],
      "line": 12,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "114:3:2",
          331.19,
          498.12,
          55.21,
          19.86,
        ],
        [
          "ayah-marker",
          "114:3",
          314.87,
          498.12,
          10.27,
          14.68,
        ],
        [
          "word",
          "114:4:1",
          284.6,
          498.12,
          24.23,
          19.86,
        ],
        [
          "word",
          "114:4:2",
          254.33,
          498.12,
          24.23,
          19.86,
        ],
        [
          "word",
          "114:4:3",
          172.42,
          498.12,
          75.86,
          19.86,
        ],
        [
          "word",
          "114:4:4",
          100.84,
          498.12,
          65.53,
          19.86,
        ],
        [
          "ayah-marker",
          "114:4",
          84.53,
          498.12,
          10.27,
          14.68,
        ],
        [
          "word",
          "114:5:1",
          33.6,
          498.12,
          44.88,
          19.86,
        ],
      ],
      "line": 13,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "114:5:2",
          260.37,
          536.48,
          53.71,
          19.32,
        ],
        [
          "word",
          "114:5:3",
          230.92,
          536.48,
          23.57,
          19.32,
        ],
        [
          "word",
          "114:5:4",
          181.38,
          536.48,
          43.66,
          19.32,
        ],
        [
          "word",
          "114:5:5",
          121.79,
          536.48,
          53.71,
          19.32,
        ],
        [
          "ayah-marker",
          "114:5",
          105.92,
          536.48,
          10,
          14.28,
        ],
      ],
      "line": 14,
      "type": "ayah",
    },
    {
      "elements": [
        [
          "word",
          "114:6:1",
          270.77,
          574.84,
          23.57,
          19.32,
        ],
        [
          "word",
          "114:6:2",
          211.18,
          574.84,
          53.71,
          19.32,
        ],
        [
          "word",
          "114:6:3",
          141.54,
          574.84,
          63.76,
          19.32,
        ],
        [
          "ayah-marker",
          "114:6",
          125.66,
          574.84,
          10,
          14.28,
        ],
      ],
      "line": 15,
      "type": "ayah",
    },
  ],
  "mushafId": "qpc-hafs-madani-604",
  "pack": "sample-hafs-2026.07.0",
  "page": 604,
}
`;
